# StoreSystem

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  config.yaml  guardian.yaml  master.yaml  standalone_test.yaml  worker-0.yaml  worker-1.yaml  worker-2.yaml  worker-3.yaml  worker.yaml  worker2.yaml
.agents/skills/brainstorming/: SKILL.md
.agents/skills/finishing-a-development-branch/: SKILL.md
.agents/skills/requesting-code-review/: SKILL.md
.agents/skills/subagent-driven-development/: SKILL.md
.agents/skills/systematic-debugging/: SKILL.md
.agents/skills/test-driven-development/: SKILL.md
.agents/skills/using-git-worktrees/: SKILL.md
.agents/skills/verification-before-completion/: SKILL.md
.agents/skills/writing-plans/: SKILL.md
.github/workflows/: ci.yml
admin-ui/: next.config.ts  package-lock.json  package.json
admin-ui/src/app/: layout.tsx
admin-ui/src/components/: Dashboard.tsx
admin-ui/src/components/panels/: ConfigPanel.tsx  LogPanel.tsx  OverviewPanel.tsx  PendingPanel.tsx  RoutePanel.tsx  WorkerDetailPanel.tsx
admin-ui/src/components/ui/: Sidebar.tsx
admin-ui/src/components/workflow/: ClusterWorkflow.tsx  MasterNode.tsx  StorageNode.tsx  WorkerNode.tsx
admin-ui/src/hooks/: useWebSocket.ts
admin-ui/src/lib/: api.ts  utils.ts
admin-ui/src/stores/: cluster-store.ts
admin-ui/src/types/: index.ts
client/: Cargo.toml  PERFORMANCE_REPORT.md  build.rs
client/src/: grpc_client.rs  main.rs  restful_client.rs
docs/superpowers/plans/: 2026-06-21-epoch-bucket-implementation.md  2026-06-21-quadkey-region-routing.md  2026-06-21-quadkey-sharding.md  2026-06-21-quadkey-stress-test.md  2026-06-22-master-config-management.md
docs/superpowers/specs/: 2026-06-21-epoch-bucket-design.md  2026-06-21-quadkey-sharding-design.md  2026-06-21-windows-startup-and-http-smoke-design.md  2026-06-22-master-config-management-design.md  2026-06-22-master-pending-cache-design.md  2026-06-23-admin-ui-v2-design.md  2026-06-23-store-guardian-design.md
examples/: continuous_write.rs  measure_latency.rs  test_rw.rs
guardian/: Cargo.toml  build.rs
guardian/src/: config.rs  main.rs  policy.rs  prober.rs  process.rs
proto/: store.proto
src/: config.rs  error.rs  grpc.rs  health.rs  http.rs  kv.rs  lib.rs  logger.rs  main.rs  master.rs  master_admin_http.rs  master_http.rs  master_log_ws.rs  master_store.rs  master_ws.rs  meta.rs  pending_store.rs  quad_shard.rs  shard.rs  store.rs  worker.rs  worker_http.rs  worker_ws.rs
