[workspace]
members = ["client", "guardian"]

[package]
name = "store_system"
version = "0.1.11"
edition = "2021"

[[bin]]
name = "store_system"
path = "src/main.rs"

[dependencies]

# 数据结构
indexmap = "2"
equivalent = "1"
hashbrown = "0.17"

# SQLite 绑定
rusqlite = { version = "0.40", features = ["bundled", "chrono", "serde_json"] }
# 异步 runtime
tokio = { version = "1", features = ["full"] }
# 错误处理
thiserror = "2"
# 序列化
serde = { version = "1", features = ["derive"] }
bincode = "2"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# LRU 缓存
dashmap = "6"
moka = { version = "0.12", features = ["sync"] }
# 字节处理
bytes = "1"
futures = "0.3"
# KV 数据库
jammdb = "0.11"
# gRPC
tonic = "0.12"
prost = "0.13"
# RESTful
warp = { version = "0.4", features = ["server"] }
# JSON
serde_json = "1"
# base64
base64 = "0.22"
# 哈希路由
seahash = "4"
# YAML 配置
serde_yaml = "0.9"
# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }
# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"
# 系统监控
num_cpus = "1"
libc = "0.2"


[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
