[package]
name = "store_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "store_client"
path = "src/main.rs"

[dependencies]
tonic = "0.9"
prost = "=0.11.9"
tokio = { version = "=1.36.0", features = ["full"] }
tokio-stream = "=0.1.14"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.9"
