[package]
name = "store_client"
version = "0.1.5"
edition = "2021"

[[bin]]
name = "store_client"
path = "src/main.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.12"
