[package]
name = "store_guardian"
version = "0.1.11"
edition = "2021"

[[bin]]
name = "store_guardian"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
anyhow = "1"

[build-dependencies]
tonic-build = "0.12"
